# follow_research

./: .dockerignore  .gitignore  .sesskey  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
backend/: __init__.py  arxiv_service.py  cache_manager.py  paper_service.py
frontend/: __init__.py  components.py  styles.py
